@@ -25,7 +25,6 @@ struct exit_function_list *__quick_exit_funcs = &initial_quick;
 
 /* Register a function to be called by quick_exit.  */
 int
-attribute_hidden
 __cxa_at_quick_exit (void (*func) (void *), void *d)
 {
   return __internal_atexit (func, NULL, d, &__quick_exit_funcs);
