@@ -66,13 +66,13 @@ extern struct exit_function *__new_exitfn (struct exit_function_list **listp);
 extern uint64_t __new_exitfn_called attribute_hidden;
 
 extern void __run_exit_handlers (int status, struct exit_function_list **listp,
-				 bool run_list_atexit) attribute_hidden;
+				 bool run_list_atexit)
+  attribute_hidden __attribute__ ((__noreturn__));
 
 extern int __internal_atexit (void (*func) (void *), void *arg, void *d,
 			      struct exit_function_list **listp)
   attribute_hidden;
-extern int __cxa_at_quick_exit (void (*func) (void *), void *d)
-  attribute_hidden;
+extern int __cxa_at_quick_exit (void (*func) (void *), void *d);
 
 
 #endif	/* exit.h  */
